--- a/css/style.css
+++ b/css/style.css
@@ -246,11 +246,12 @@ i {
 
 #char_conv {
     width: 100%;
-    height: calc(100% - 70px);
+    height: calc(100% - 140px);
     background-image: url('../img/mine.jpg');
     background-position: center;
     background-repeat: repeat;
-    padding: 50px;
+    padding: 30px 50px 150px;
+    overflow-y: scroll;
 }
 
 #char_conv ul li {
@@ -260,7 +261,6 @@ i {
 #char_board {
     position: absolute;
     bottom: 0;
-    z-index: 1;
     width: 100%;
     height: 70px;
     background: #eaeaea;
@@ -295,19 +295,46 @@ i {
     padding: 10px 25px;
 }
 
+.msg_right {
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px 0;
+}
+
+.msg_left {
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px 0;
+}
+
 .msg_sent {
-    padding: 20px;
+    padding: 20px 20px 10px;
     background: #d5f9ba;
-    color: #555;
-    text-align: right;
-    border-radius: 5px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+    max-width: 40%;
 }
 
 .msg_rec {
-    padding: 20px;
+    padding: 20px 20px 10px;
     background: #fff;
-    color: #555;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+    max-width: 40%;
+}
+
+.msg_text {
+    font-size: 16px;
+    color: #333;
     text-align: left;
+}
+
+.msg_date {
+    font-size: 10px;
+    color: #aaa;
+    text-align: right;
+    text-transform: uppercase;
+    line-height: 2.5;
 }
 
 /*  HOVER  */
