--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ i {
 
 .msg_left {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     margin: 20px 0;
 }
 
